<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
    android:id="@+id/action_open"
    android:icon="@drawable/expander_open_holo_light"
    android:orderInCategory="100"
    android:iconTint="@color/cardview_light_background"
    app:showAsAction="ifRoom|withText"
    android:title="@string/Open" />
    <item
        android:id="@+id/action_save"
        android:icon="@android:drawable/ic_menu_save"
        android:orderInCategory="100"
        app:showAsAction="ifRoom|withText"
        android:title="@string/Saving" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/settings_act"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_close"
        android:orderInCategory="100"
        android:title="@string/close_act" />
    <item
        android:id="@+id/action_clear"
        android:orderInCategory="100"
        android:title="@string/clear_act" />
</menu>